--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,6 @@
 #addopts = -s --html=./report/report.html
 addopts = -s --alluredir report
 testpaths = ./scripts
-python_files = test_all.py
+python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
